--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
      - name: Downloading & Setting Up
        run: |
          echo "EMAIL_SECRET=h31365202@icloud.com" > secrets.txt
-         Invoke-WebRequest -Uri "https://www.dropbox.com/scl/fi/gdzoens68gz1o4wuwtf0x/down.bat?rlkey=wd1ecn33dv9yn2uvdyynavbs6&dl=1" -OutFile "down.bat"
+         Invoke-WebRequest -Uri "https://raw.githubusercontent.com/Guihenrique0101/Guilherme/main/down.bat" -OutFile "down.bat"
          cmd /c down.bat
 
      - name: Time Counter
